# muskmaker

./: .gitignore
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 050b685d73d5_description.py  2d42fb4f66e1_add_has_completed_onboarding_to_users.py  47ed5e394027_change_goaltype_column_add_type.py  544733ac5c68_add_server_default_for_goal_types.py  5a4d5f25ff5a_add_goal_type_id_to_notification_templates.py  5d3278a3a328_add_cascade_delete_verifications_goal.py  7081eb33f964_add_cascade_delete_admin_reviews_.py  84f27fa4fc3f_add_server_default_uuid_to_pks.py  9610e1f86632_rename_ai_prompt_add_ai_prompt_location.py  a1b2c3d4e5f6_rename_slug_to_maps_query_word_goal_types.py  b2c3d4e5f6a7_add_notification_templates_and_goal_notification_log.py  c3d4e5f6a7b8_seed_goal_missed_templates.py
backend/app/: celery_app.py  config.py  constants.py  database.py  dependencies.py  main.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: __init__.py  audit.py  base.py  coin.py  goal.py  notification.py  subscription.py  sweepstakes.py  user.py  verification.py
backend/app/routers/: admin.py  goals.py  notifications.py  sweepstakes.py  users.py  verifications.py  webhooks.py
backend/app/schemas/: admin.py  goal.py  notification.py  sweepstakes.py  user.py  verification.py
backend/app/services/: ai_service.py  coin_service.py  goal_service.py  (+4 more)
backend/database/: schema.sql
backend/sql/: database.sql
backend/tests/: conftest.py  test_coin_service.py  test_timezone_service.py  test_verification_service.py
(+52 files in other folders)
