[tool.poetry]
name = "muskmaker-api"
version = "0.1.0"
description = "MuskMaker backend API"
authors = []
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = "^0.115.12"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
gunicorn = "^23.0.0"

# Database
sqlalchemy = { version = "^2.0.40", extras = ["asyncio"] }
asyncpg = "^0.30.0"
alembic = "^1.15.2"

# Settings / validation
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.8.1"

# Firebase Auth
firebase-admin = "^6.8.0"

# AWS
boto3 = "^1.37.34"

# EXIF extraction (server-side only — never trust client EXIF)
Pillow = "^11.2.1"
piexif = "^1.1.3"

# Timezone validation
pytz = "^2025.2"

# AI verification
openai = "^1.75.0"

# Rate limiting
slowapi = "^0.1.9"

# HTTP client (Expo push, outbound webhooks)
httpx = "^0.28.1"

# Background task scheduling
apscheduler = "^3.11.0"

# Security
python-jose = { version = "^3.4.0", extras = ["cryptography"] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
factory-boy = "^3.3.3"
ruff = "^0.11.4"
mypy = "^1.15.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
